--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -195,17 +195,18 @@
         android:textColor="@color/black"
         android:textSize="@dimen/profile_go_to_settings_text_size" />
 
+    <!--<androidx.appcompat.widget.AppCompatButton-->
     <Button
         android:id="@+id/button_edit_profile"
         style="@style/edit_profile_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-
         android:backgroundTint="@color/white"
         app:strokeColor="@color/view_color"
         app:strokeWidth="@dimen/profile_edit_profile_stroke_width"
         tools:ignore="MissingConstraints" />
 
+    <!--<androidx.appcompat.widget.AppCompatButton-->
     <Button
         android:id="@+id/button_view_contacts"
         style="@style/open_sans_font"
