some changes after review

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -59,7 +59,7 @@
         android:id="@+id/textview_label_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:gravity="center"
         android:text="@string/let_s_get_acquainted"
         android:textColor="@color/main_text_color"
@@ -68,7 +68,7 @@
 
     <TextView
         android:id="@+id/textview_label_2"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -104,6 +104,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
+            android:inputType="textEmailAddress"
             android:textColor="@color/color_edit_text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -136,7 +137,7 @@
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/remember_me_checkbox"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
@@ -163,10 +164,9 @@
         app:layout_constraintEnd_toEndOf="@id/content_end"
         />
 
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_google"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
@@ -185,15 +185,14 @@
 
     <TextView
         android:id="@+id/textview_or"
-        style="@style/open_sans_font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textAppearance="@style/open_sans_font"
         android:text="@string/or"
         android:textColor="@color/main_text_color"
         android:textSize="@dimen/auth_text_size_largest"
         tools:ignore="MissingConstraints" />
-
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_register"
@@ -207,12 +206,12 @@
         android:textColor="@color/main_text_color"
         android:textSize="@dimen/auth_button_text_size"
 
-        app:cornerRadius="@dimen/profile_view_contacts_corner_radius"
+        app:cornerRadius="@dimen/button_corner_radius"
         android:insetTop="0dp"
         android:insetBottom="0dp"
 
         app:strokeColor="@color/orange"
-        app:strokeWidth="@dimen/auth_register_button_stroke_width"
+        app:strokeWidth="@dimen/button_stroke_width"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -221,7 +220,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_small"
 
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:gravity="center"
         android:text="@string/terms_text_portrait"
         android:textColor="@color/main_text_color"
@@ -249,7 +248,7 @@
 
     <TextView
         android:id="@+id/textview_have_acc"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/already_have_an_account"
@@ -263,7 +262,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:text="@string/sign_in"
         android:textColor="@color/main_text_color"
         android:textSize="@dimen/auth_text_size_big"
