--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -183,11 +183,20 @@
 
         app:layout_constraintBottom_toBottomOf="@id/content_bottom"
         app:layout_constraintEnd_toEndOf="@id/content_end"
-        app:layout_constraintStart_toStartOf="@id/content_start" />
+        app:layout_constraintStart_toStartOf="@id/content_start"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_edit_profile"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/edit_profile_btn"
+        android:text="@string/edit_profile"
+        android:background="@drawable/edit_profile_button_border"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textview_fill_out_profile"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -195,29 +204,17 @@
         android:textColor="@color/black"
         android:textSize="@dimen/profile_go_to_settings_text_size" />
 
-    <Button
-        android:id="@+id/button_edit_profile"
-        style="@style/edit_profile_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-
-        android:backgroundTint="@color/white"
-        app:strokeColor="@color/view_color"
-        app:strokeWidth="@dimen/profile_edit_profile_stroke_width"
-        tools:ignore="MissingConstraints" />
-
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_view_contacts"
-        style="@style/open_sans_font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/orange"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:paddingVertical="@dimen/profile_button_padding"
+        android:background="@drawable/view_my_contacts_button"
+        android:textAppearance="@style/open_sans_font"
         android:text="@string/view_my_contacts"
         android:textColor="@color/main_text_color"
         android:textSize="@dimen/profile_button_text_size"
+
+        android:paddingVertical="@dimen/profile_button_padding"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
