--- a/app/src/main/res/layout-land/activity_auth.xml
+++ b/app/src/main/res/layout-land/activity_auth.xml
@@ -57,7 +57,7 @@
         android:id="@+id/textview_label_1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:gravity="center"
         android:text="@string/let_s_get_acquainted"
         android:textColor="@color/main_text_color"
@@ -66,7 +66,7 @@
 
     <TextView
         android:id="@+id/textview_label_2"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -137,7 +137,7 @@
         android:id="@+id/remember_me_checkbox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
 
         android:buttonTint="@color/main_text_color"
         android:text="@string/remember_me"
@@ -167,7 +167,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_google"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
@@ -185,7 +185,7 @@
 
     <TextView
         android:id="@+id/textview_or"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -200,19 +200,19 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:gravity="center"
         android:text="@string/register"
         android:textAllCaps="true"
         android:textColor="@color/main_text_color"
         android:textSize="@dimen/auth_button_text_size_landscape"
 
-        app:cornerRadius="@dimen/profile_view_contacts_corner_radius"
+        app:cornerRadius="@dimen/button_corner_radius"
         android:insetTop="0dp"
         android:insetBottom="0dp"
 
         app:strokeColor="@color/orange"
-        app:strokeWidth="@dimen/auth_register_button_stroke_width"
+        app:strokeWidth="@dimen/button_stroke_width"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -221,7 +221,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_small"
 
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:gravity="center"
         android:text="@string/terms_text_land"
         android:textColor="@color/main_text_color"
@@ -249,7 +249,7 @@
 
     <TextView
         android:id="@+id/textview_have_acc"
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/already_have_an_account"
@@ -262,7 +262,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:text="@string/sign_in"
         android:textColor="@color/main_text_color"
         android:textSize="@dimen/auth_text_size_medium"
