--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -199,7 +199,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
-        style="@style/open_sans_font"
+        android:textAppearance="@style/open_sans_font"
         android:gravity="center"
         android:text="@string/register"
         android:textAllCaps="true"
