--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,10 +6,15 @@
         <item name="android:textFontWeight">600</item>
     </style>
 
-
     <style name="edit_profile_btn" parent="open_sans_font">
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/profile_button_text_size</item>
+    </style>
+
+    <style name="edit_profile_btn_night" parent="open_sans_font">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/main_text_color_night</item>
         <item name="android:textSize">@dimen/profile_button_text_size</item>
     </style>
 
